kuberentes/kubernetes-documents/Mesh Service/App Mesh/문제/solved/virtualnode.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: result-virtual-service
  namespace: voting
spec:
  awsName: result-virtual-service
  provider:
    virtualNode:
      virtualNodeRef:
        name: result-virtual-node
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: voting-virtual-service
  namespace: voting
spec:
  awsName: voting-virtual-service
  provider:
    virtualNode:
      virtualNodeRef:
        name: voting-virtual-node

---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: redis-virtual-service
  namespace: voting
spec:
  awsName: redis-virtual-service
  provider:
    virtualNode:
      virtualNodeRef:
        name: redis-virtual-node

---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: db-virtual-service
  namespace: voting
spec:
  awsName: db-virtual-service
  provider:
    virtualNode:
      virtualNodeRef:
        name: db-virtual-node
